# flood-api

./: Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: continous-integration.yaml
alembic/: env.py
alembic/versions/: 2023_10_26_1410-ef52d897bf43_install_postgis.py
argocd/: app.yaml
deployment/: flood-api.yaml
deployment/argocd/: app.yaml
deployment/kubernetes/: flood-api-deployment-restart.yaml  flood-api.yaml
flood_api/: __main__.py  settings.py
flood_api/db/: database.py
flood_api/dependencies/: flooddata.py  models.py  queryparams.py
flood_api/example_code/curl/: detailed.sh  liveness.sh  summary.sh  threshold.sh
flood_api/example_code/javascript/: detailed.js  ready.js  summary.js  threshold.js
flood_api/example_code/python/: detailed.py  summary.py  threshold.py
flood_api/models/: detailed_types.py  shared_types.py  summary_types.py  threshold_types.py
flood_api/openapi/: openapi.py
flood_api/routers/: flood.py  healthcheck.py
flood_api/tests/: synthetic_data.py  test_detailed.py  test_healthcheck.py  test_summary.py  test_threshold.py  test_utils.py
flood_api/utils/: geospatial_operations.py  json_utilities.py  validation_helpers.py
