[tool.poetry]
name = "flood-api"
version = "0.1.0"
description = "API for flood data"
authors = ["Erik Dymbe <erik.dymbe@knowit.no>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
sqlalchemy = "^2.0.22"
py-healthcheck = "^1.10.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
